--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,11 @@
     </properties>
 
     <dependencies>
-        
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>2.0.2-beta</version>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
